<resources>
    <string name="app_name">MAICATCH</string>
    <string name="firstname">Firstname</string>
    <string name="company">Company</string>
    <string name="lastname">Lastname</string>
    <string name="street">Street</string>
    <string name="zipCity">Zip City</string>
    <string name="phone">Phone</string>
    <string name="mobil">Mobil</string>
    <string name="fax">Fax</string>
    <string name="email">E-Mail</string>
    <string name="url">Url</string>
    <string name="gender">Gender</string>
    <string name="edit">Edit</string>
    <string name="clear">Clear</string>
    <string name="orc">Start OCR with the Picture</string>
    <string name="choosen">CHOOSEN PICTURE</string>
    <string name="tnP">TAKE NEW PICTURE</string>
    <string name="existingOne">Take an existing one</string>
    <string name="createContact">Create new Contact</string>
    <string name="head">maiCatch</string>
    <string name="createContactAndroid">CREATE CONTACT IN ANDROID</string>
    <string name="createContactC4C">CREATE CONTACT IN C4C</string>

    <string-array name="gender">
        <item>male</item>
        <item>female</item>
    </string-array>
</resources>
