<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="hochschule.maicatch.MainActivity">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            style="@style/maicatchHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/head" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"></View>

        <Button
            android:id="@+id/takePhoto"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@drawable/bright_trans"
            android:drawableLeft="@drawable/take"
            android:onClick="onTakePhoto"
            android:padding="24dp"
            android:text="@string/tnP"
            android:textSize="20dp" />

        <Button
            android:id="@+id/chooseGallery"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bright_trans"
            android:drawableLeft="@drawable/choose"
            android:onClick="onChooseGallery"
            android:padding="24dp"
            android:text="@string/existingOne"
            android:textSize="20dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bright_trans"
            android:drawableLeft="@drawable/newcontact"
            android:padding="24dp"
            android:text="@string/createContact"
            android:textSize="20dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"></View>

    </LinearLayout>
</FrameLayout>
