<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:background="@drawable/dark_trans"
                android:gravity="center"
                android:orientation="horizontal">

                <Button

                    android:id="@+id/leftBtn"
                    android:layout_width="90dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/bright_trans"
                    android:text="@string/edit"
                    android:textSize="15dp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"></View>

                <TextView
                    style="@style/Header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choosen" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"></View>

                <Button
                    android:id="@+id/rightBtn"
                    android:layout_width="90dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/bright_trans"
                    android:onClick="onClear"
                    android:text="@string/clear"
                    android:textSize="15dp" />

            </LinearLayout>

            <TableLayout
                android:id="@+id/imageTable"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"></TableLayout>

            <Button
                android:id="@+id/btn_call_api"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bright_trans"
                android:onClick="onStartOCR"
                android:text="@string/orc" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>